--- a/package.xml
+++ b/package.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>path_follower</name>
-  <version>0.0.0</version>
+  <version>1.0.0</version>
   <description>The path_follower package</description>
-
+  <!-- version 0.0.0 original -->
+  <author email="roland@ccom.unh.edu">Roland Arsenault</author>
   <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>
+  <!-- version 1.0.0 modified -->
+  <maintainer email="marcos.barrera@seafloorsystems.com">Marcos Barrera</maintainer>
 
   <license>BSD</license>
 
